# htx-danson-assignment

./: README.md
backend/: Dockerfile  database.db  docker-compose.yml  main.py  pyproject.toml
backend/src/backend/: enum.py
backend/src/backend/models/: Transcription.py
backend/src/backend/services/: celery_service.py  sqlite_db_service.py  transcribe_service.py
backend/src/backend/utils/: file_utils.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.tsx  enums.ts  index.css  utils.tsx
frontend/src/components/: FileUploader.tsx  Spinner.tsx
frontend/src/contexts/: ReactQueryProvider.tsx
frontend/src/interfaces/: IUploadedFile.ts
frontend/src/pages/: Home.tsx
